# MEXPENSE---AI-Medical-Expense-Calculator

./: main.ipynb  main.py  pyproject.toml  requirements.txt
Linear Regression/: main.ipynb
Logistic_Regression/: aussie_rain.joblib
